Show style scoping.

--- a/test/test.html
+++ b/test/test.html
@@ -2,9 +2,12 @@
 
 <div>
   <shadow-root>
+    <style>
+      p { color: red; }
+    </style>
     <p>I'm a shadow root!</p>
     <slot></slot>
     <p>That was my slot.</p>
   </shadow-root>
-  I'm the light content.
+  <p>I'm the light content.</p>
 </div>
